feat Product, Client, Order with unit tests